# Skate-3-Recompiled--Work-in-Progress-

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  setup.bat  setup_recomp.bat  skate3_recomp.config.json  skate3rexglue_crash.txt
Skate3RecompLib/: CMakeLists.txt
Skate3RecompLib/config/: skate3.toml
Skate3RecompLib/include/: skate3_recomp_msvc_compat.h
Skate3RecompLib/src/: skate3_recomp_epilogue_shims.cpp
docs/patches/: rexglue-sdk-skate3-boot.patch  xenonrecomp-msvc-compat.patch  xenonrecomp-msvc-toolchain.patch
experiments/rexglue/Skate3RexGlue/: .gitignore  CMakeLists.txt  README.md  skate3rexglue_manifest.toml
experiments/rexglue/Skate3RexGlue/src/: main.cpp  skate3_hooks.cpp  skate3rexglue_app.h
gameexe/: CMakeLists.txt
gameexe/src/: main.cpp
launcher/: CMakeLists.txt
launcher/src/: asset_locator.cpp  asset_locator.h  importer.cpp  importer.h  iso_utils.cpp  iso_utils.h  main.cpp  resource.h  resources.rc  validator.cpp  validator.h  win_dialogs.cpp  win_dialogs.h
runtime/: CMakeLists.txt
runtime/boot/: game_boot.cpp  game_boot.h  recomp_bridge.cpp  recomp_bridge.h
runtime/hal/: fs.cpp  fs.h  mem.cpp  mem.h  sys.cpp  sys.h
tools/: manifest_boot.json  recomp.toml  run_recomp.bat
